--- a/style/projects.css
+++ b/style/projects.css
@@ -121,6 +121,38 @@ body {
 }
 
 
+.dancerito {
+    overflow: hidden;
+    z-index:10;
+    position: relative;
+    padding-bottom: 40px;
+    min-height: 100vh;
+    background-image: linear-gradient(120deg, #6f0000, #200122);
+}
+
+
+.conacomee {
+    overflow: hidden;
+    z-index:10;
+    position: relative;
+    padding-bottom: 40px;
+    min-height: 100vh;
+    background-image: linear-gradient(80deg, #536976, #292E49);
+}
+
+.sonograph {
+    overflow: hidden;
+    z-index:10;
+    position: relative;
+    padding-bottom: 40px;
+    min-height: 100vh;
+    background-image: linear-gradient(40deg, #000428, #004e92);
+}
+
+.sonograph .col-b{
+    z-index: -100;
+}
+
 
 .evoFit {
     overflow: hidden;
